--- a/src/CSS/reset.css
+++ b/src/CSS/reset.css
@@ -130,3 +130,9 @@ table {
 * {
     box-sizing: border-box;
 }
+button {
+    outline: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
